force-app/main/default/objects/Account/fields/asd__c.field-meta.xml
<CustomField>
    <fullName>asd__c</fullName>
    <label>asd</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>