force-app/main/default/objects/Account/fields/asds__c.field-meta.xml
<CustomField>
    <fullName>asds__c</fullName>
    <label>asds</label>
    <type>Email</type>
</CustomField>