force-app/main/default/objects/Account/fields/buri__c.field-meta.xml
<CustomField>
    <fullName>buri__c</fullName>
    <label>buri</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>