force-app/main/default/objects/Account/fields/dfg__c.field-meta.xml
<CustomField>
    <fullName>dfg__c</fullName>
    <label>dfg</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>