force-app/main/default/objects/Account/fields/eden__c.field-meta.xml
<CustomField>
    <fullName>eden__c</fullName>
    <label>eden</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>