force-app/main/default/objects/Account/fields/eu__c.field-meta.xml
<CustomField>
    <fullName>eu__c</fullName>
    <label>euq</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>