force-app/main/default/objects/Account/fields/isUfi__c.field-meta.xml
<CustomField>
    <fullName>isUfi__c</fullName>
    <label>isUfi</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>