force-app/main/default/objects/Account/fields/rty__c.field-meta.xml
<CustomField>
    <fullName>rty__c</fullName>
    <label>rty</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>