force-app/main/default/objects/Account/fields/X30011__c.field-meta.xml
<CustomField>
    <fullName>X30011__c</fullName>
    <label>30011</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>