force-app/main/default/objects/Account/fields/X30012__c.field-meta.xml
<CustomField>
    <fullName>X30012__c</fullName>
    <label>30012</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>