force-app/main/default/objects/Account/fields/X30013__c.field-meta.xml
<CustomField>
    <fullName>X30013__c</fullName>
    <label>30013</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>